# abcg

./: .gitignore  README.md
examples/: CMakeLists.txt
examples/asteroids/: CMakeLists.txt  openglwindow.cpp  ship.cpp
examples/coloredtriangles/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/danmaku/: CMakeLists.txt  README.md  gamedata.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/danmaku/assets/: stars.vert
examples/danmaku/entities/: bullets.cpp  bullets.hpp  enemy.cpp  enemy.hpp  healthbar.cpp  healthbar.hpp  ship.cpp  ship.hpp  shots.cpp  shots.hpp  stars.cpp  stars.hpp
examples/firstapp/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/loadmodel/: CMakeLists.txt
examples/lookat/: CMakeLists.txt
examples/regularpolygons/: CMakeLists.txt  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/sandan/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  gamedata.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/sandan/entities/: bullets.cpp  bullets.hpp  healthbar.cpp  healthbar.hpp  model.cpp  model.hpp  ship.cpp  ship.hpp  shipcore.cpp  shipcore.hpp  shots.cpp  shots.hpp  skybox.cpp  skybox.hpp  ufo.cpp  ufo.hpp
examples/sandanpreview/: CMakeLists.txt  README.md  camera.cpp  camera.hpp  main.cpp  openglwindow.cpp  openglwindow.hpp
examples/sierpinski/: main.cpp  openglwindow.cpp  openglwindow.hpp
examples/starfield/: CMakeLists.txt
examples/viewer1/: CMakeLists.txt
examples/viewer2/: main.cpp  openglwindow.cpp
examples/viewer6/: main.cpp  openglwindow.cpp
(+78 files in other folders)
