# Examples
#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids)
#add_subdirectory(loadmodel)
#add_subdirectory(lookat)
#add_subdirectory(viewer1)
#add_subdirectory(starfield)
#add_subdirectory(sandanpreview)
#add_subdirectory(viewer2)
#add_subdirectory(viewer3)
add_subdirectory(viewer4)

# Assignments
#add_subdirectory(danmaku)
